--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,9 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
+@import url('https://fonts.googleapis.com/css?family=Arimo');
+
 body{
 	padding: 0px;
 	margin: 0px;
-	font-family: 'Roboto Condensed', sans-serif;
+	font-family: 'Arimo', sans-serif;
 }
 #principal{
 	background-image: url(../img/font.jpg);
@@ -19,10 +20,12 @@ body{
 }
 #navegacion {
 	background: white;
+	font-size: 15px;
 }
 
 .logo {
-	height: 50px;
+	padding-top: 5px;
+	height: 45px;
 	float: left;
 }
 
@@ -34,13 +37,16 @@ body{
 
 #navegacion ul li{
 	display: inline-block;
-	padding: 15px 10px 0px 10px;
+	padding: 18px 10px 0px 10px;
+}
+#navegacion ul a:hover{
+	color: #1A5DB9;
 }
 
 #navegacion ul a{
 	text-decoration: none;
 	color: #000;
-	font-size: 20px;	
+	font-size: 15px;	
 }
 .new {
 	display: inline-block;
@@ -48,9 +54,19 @@ body{
 }
 
 .new2 {
-	background: #29ABE1;
 	display: inline-block;
 	margin-left: 10px;
 	margin-top: 5px;
 	height: 45px;
+}
+
+.content1 {
+	padding-top: 5px;
+	height: 50px;
+	margin-bottom: 10px;
+}
+
+.contacte {
+	float: right;
+	padding-right: 15px;
 }
