--- a/css/styles.css
+++ b/css/styles.css
@@ -15,13 +15,10 @@ body{
 }
 .capa{
 	color: aqua;
-	width: 94%;
-    max-width: 1010px;
-    margin: 0 auto;
+	margin-left: 178px;
 }
 .boton{
 	background: #F6F9E9;
-    max-width: 1010px;
     margin-left: 178px;
 	height: 40px;
 	width: 120px;
